@startuml

title __PROTOTYPE's Class Diagram__\n

  namespace com.lkj.prototype {
    class com.lkj.prototype.Circle {
        - r : int
        - x : int
        - y : int
        + Circle()
        + Circle()
        + draw()
        + paint()
    }
  }
  

  namespace com.lkj.prototype {
    class com.lkj.prototype.PrototypeDemo {
        ~ offScreeImage : Image
        + PrototypeDemo()
        + paint()
        + update()
    }
  }
  

  namespace com.lkj.prototype {
    class com.lkj.prototype.PrototypePatternDemo {
        {static} + main()
    }
  }
  

  namespace com.lkj.prototype {
    class com.lkj.prototype.Rectangle {
        - h : int
        - w : int
        - x : int
        - y : int
        + Rectangle()
        + Rectangle()
        + draw()
        + paint()
    }
  }
  

  namespace com.lkj.prototype {
    abstract class com.lkj.prototype.Shape {
        # type : String
        - id : String
        + clone()
        + getId()
        + getType()
        + setId()
        {abstract} ~ draw()
    }
  }
  

  namespace com.lkj.prototype {
    class com.lkj.prototype.ShapeCache {
        {static} - shapeMap : Hashtable<String, Shape>
        {static} + getShape()
        {static} + loadCache()
    }
  }
  

  namespace com.lkj.prototype {
    class com.lkj.prototype.Square {
        - a : int
        - x : int
        - y : int
        + Square()
        + Square()
        + draw()
        + paint()
    }
  }
  

  com.lkj.prototype.Circle -up-|> com.lkj.prototype.Shape
  com.lkj.prototype.PrototypeDemo -up-|> javax.swing.JFrame
  com.lkj.prototype.PrototypeDemo o-- com.lkj.prototype.Circle : circle
  com.lkj.prototype.PrototypeDemo o-- com.lkj.prototype.Rectangle : rectangle
  com.lkj.prototype.PrototypeDemo o-- com.lkj.prototype.Square : square
  com.lkj.prototype.Rectangle -up-|> com.lkj.prototype.Shape
  com.lkj.prototype.Shape .up.|> com.lkj.common.DrawSelf
  com.lkj.prototype.Shape .up.|> java.lang.Cloneable
  com.lkj.prototype.Square -up-|> com.lkj.prototype.Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
